Fixed logo size on small screens

--- a/web/src/components/header.module.css
+++ b/web/src/components/header.module.css
@@ -36,6 +36,7 @@
   color: var(--color-logo1);
 }
 
+
 .branding {
   font-weight: 400;
   font-size: 2.5em;
@@ -59,9 +60,10 @@
   @media (--media-max-small) {
     margin-top: 10px;
     margin-bottom: -10px;
-    font-size: 2em;
+    font-size: 1.7em;
   }
 }
+
 
 .logo {
   z-index: 2;
